@@ -1,3 +1,7 @@
+2009-07-31  Sanel <karijes@users.sourceforge.net>
+
+	* edelib/EdbusConnection.h: completed documentation
+
 2009-07-21  Sanel <karijes@users.sourceforge.net>
 
 	* src/FontChooser.cpp: cosmetic changes
